When a sub-server is converted to a top-level server, files from /etc/skel are copied into its home directory.
When a virtual server is disabled, all extra admin logins are disabled too.
When a mailbox user is delete, his Dovecot index and control files are removed too in order to avoid clashes with future users with the same name.
Added a Module Config setting to make collection of all available packages optional.
Added the list-php-ini API command for fetching PHP settings from one or more domains.
Added a logrotate template-level option for additional files to rotate for new domains.
When restoring a virtual server with a php.ini file whose extension directory is incorrect, fix it to match this system if possible.
Added the import-database API command, for associating an existing un-owned database with a domain.
The Manage SSL Certificate page can now be used to copy a domain's cert and key to Dovecot or Postfix.
Script version upgrades that are completely un-supported (like Jooma 1.0 to 1.5) are now no longer displayed in Virtualmin.
Concurrent backups to the same destination are now no longer allowed, due to the potential for corruption and odd partial failures.
Added a Module Config option to always show output from pre and post virtual server creation commands.
---- Changes since 3.75 ----
Updated the Plans script installer to version 8.1.6, Wordpress to 2.8.6, Wordpress MU to 2.8.6, redmine to 0.8.7, Bugzilla to 3.4.4, and Nucleus to 3.51.
Added the --passfile flag to all domain, user, reseller and extra admin creation and modification commands, for reading the password from a file so it doesn't show up in ps output.
Added a DNS template option to control if an NS record is added for the Virtualmin system.
Disk quota monitoring now has an option to send email to mailboxes who are over quota.
When moving a virtual server, update the paths in the script logs DB to match the new location.