@@ -1191,3 +1191,4 @@ Added the --passfile flag to all domain, user, reseller and extra admin creation
 Added a DNS template option to control if an NS record is added for the Virtualmin system.
 Disk quota monitoring now has an option to send email to mailboxes who are over quota.
 When moving a virtual server, update the paths in the script logs DB to match the new location.
+Backups and restores made by domain owners are now included in their bandwidth usage.
